--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
                             <span class="link">Resume</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="dev-tools.html">
+                            <span class="icon ion-code"></span>
+                            <span class="link">Dev Tools</span>
+                        </a>
+                    </li>
 <!--                    <li>-->
 <!--                        <a href="#blog-card">-->
 <!--                            <span class="icon ion-chatbox-working"></span>-->
