--- a/dev-tools.html
+++ b/dev-tools.html
@@ -129,6 +129,18 @@
                             <span class="link">Prettify JSON</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="#base64encode-card">
+                            <span class="icon ion-wand"></span>
+                            <span class="link">Base64 Encode</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#base64decode-card">
+                            <span class="icon ion-wand"></span>
+                            <span class="link">Base64 Decode</span>
+                        </a>
+                    </li>
                 </ul>
 
             </div>
@@ -205,6 +217,51 @@
 
             </div>
         </div>
+
+
+
+
+        <div class="card-inner animated" id="base64encode-card">
+            <div class="card-wrap">
+                <div class="content about">
+                    <div class="title">Base64 Encode</div>
+                    <div class="row">
+                        <div class="col col-d-12 col-t-12 col-m-12 border-line-v">
+                            <div class="text-box">
+                                <p>
+                                    <button class="no-show" onclick="copyEncoded()" id="btn-copy-encoded"><span class="icon ion-ios-copy"></span> Click to Copy</button>
+                                <pre id="encoded-output"></pre>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="card-inner animated" id="base64decode-card">
+            <div class="card-wrap">
+                <div class="content about">
+                    <div class="title">Base64 Decode</div>
+                    <div class="row">
+                        <div class="col col-d-12 col-t-12 col-m-12 border-line-v">
+                            <div class="text-box">
+                                <p>
+                                    <button class="no-show" onclick="copyDecoded()" id="btn-copy-decoded"><span class="icon ion-ios-copy"></span> Click to Copy</button>
+                                <pre id="decoded-output"></pre>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
 <!--        <textarea name="textarea-no-show" id="ta-no-show" cols="0" rows="0" style="position:absolute; left: -100%"></textarea>-->
 
 
