removes dummy text

--- a/dev-tools.html
+++ b/dev-tools.html
@@ -187,7 +187,7 @@
                                 <p>
                                     <button class="no-show" onclick="copyEscapedString()" id="btn-copy-escaped"><span class="icon ion-ios-copy"></span> Click to Copy</button>
                                     <br>
-                                    <textarea rows="200" cols="200" class="ht350" id="escape-output">escape Output</textarea>
+                                    <textarea rows="200" cols="200" class="ht350" id="escape-output"></textarea>
                                 </p>
                             </div>
                         </div>
