--- a/products/a.html
+++ b/products/a.html
@@ -8,6 +8,8 @@
 <a target="_blank" href="https://www.amazon.in?&_encoding=UTF8&tag=prahtml-21&linkCode=ur2&linkId=25491fd7e38ac256b40938cccd3e3355&camp=3638&creative=24630">Amazon</a><img src="//ir-in.amazon-adsystem.com/e/ir?t=prahtml-21&l=ur2&o=31" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 
 <a id="the_link"></a>
+<br/>
+<script type="text/javascript">amzn_assoc_ad_type ="responsive_search_widget"; amzn_assoc_tracking_id ="aniketsinha01-21"; amzn_assoc_marketplace ="amazon"; amzn_assoc_region ="IN"; amzn_assoc_placement =""; amzn_assoc_search_type = "search_widget";amzn_assoc_width ="auto"; amzn_assoc_height ="auto"; amzn_assoc_default_search_category =""; amzn_assoc_default_search_key ="";amzn_assoc_theme ="light"; amzn_assoc_bg_color ="FFFFFF"; </script><script src="//z-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&Marketplace=IN"></script>
 <script>
     let srch = window.location.search;
     const c = 'c';
