adds Amazon search box

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
                             <span class="link">Dev Tools</span>
                         </a>
                     </li>
-<!--                    <li>-->
-<!--                        <a href="#blog-card">-->
-<!--                            <span class="icon ion-chatbox-working"></span>-->
-<!--                            <span class="link">Blog</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
+                    <li>
+                        <a href="reviews.html">
+                            <span class="icon ion-chatbox-working"></span>
+                            <span class="link">Reviews</span>
+                        </a>
+                    </li>
                     <li>
                         <a href="#contacts-card">
                             <span class="icon ion-at"></span>
