adds CURL builder support

--- a/dev-tools.html
+++ b/dev-tools.html
@@ -140,6 +140,10 @@
                             <span class="icon ion-wand"></span>
                             <span class="link">Base64 Decode</span>
                         </a>
+                        <a href="curl-builder.html">
+                            <span class="icon ion-laptop"></span>
+                            <span class="link">CURL Builder</span>
+                        </a>
                     </li>
                 </ul>
 
