replaces index page, moves home to about.html

--- a/curl-builder.html
+++ b/curl-builder.html
@@ -87,14 +87,14 @@
                 <ul>
                     <li>
                         <a href="/">
-                            <span class="icon ion-home"></span>
-                            <span class="link">Home</span>
+                            <span class="icon ion-code"></span>
+                            <span class="link">More Dev Tools</span>
                         </a>
                     </li>
                     <li>
-                        <a href="dev-tools.html">
-                            <span class="icon ion-code"></span>
-                            <span class="link">More Dev Tools</span>
+                        <a href="about.html">
+                            <span class="icon ion-information"></span>
+                            <span class="link">About</span>
                         </a>
                     </li>
                 </ul>
@@ -116,7 +116,6 @@
                     <button ng-click="addHeader()"><span class="icon ion-plus" style="padding-top: 50%;"></span></button>
                     <div class="text-box">
                         <textarea rows="200" cols="200" class="ht350" id="ta-input" ng-model="selected.body"></textarea>
-                        <br><button ng-click="generateOutput()">Go</button>
                     </div>
                 </div>
             </div>
