--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
                         <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
                             <div class="info-list">
                                 <ul>
-                                    <li><strong>Designation . . . . .</strong> SDE 2</li>
+                                    <li><strong>Designation . . . . .</strong> SDE 3</li>
                                     <li><strong>Organisation . . . . .</strong> Swiggy</li>
                                     <li><strong>Address . . . . .</strong> Bengaluru, India</li>
                                 </ul>
@@ -249,7 +249,20 @@
                             </div>
                             <div class="resume-items">
                                 <div class="resume-item border-line-h active">
-                                    <div class="date">April, 2019 - Present</div>
+                                    <div class="date">October, 2020 - Present</div>
+                                    <div class="name">Software Dev Engineer III</div>
+                                    <div class="company">
+                                        <a target="_blank" rel="noopener noreferrer" href="https://swiggy.com">Swiggy,
+                                            Bengaluru</a>
+                                    </div>
+
+                                    <p>
+                                        <strong>Genie for Business:</strong> As Genie 2.0, working on extending Swiggy Genie for businesses.
+
+                                    </p>
+                                </div>
+                                <div class="resume-item border-line-h">
+                                    <div class="date">April, 2019 - September, 2020</div>
                                     <div class="name">Software Dev Engineer II</div>
                                     <div class="company">
                                         <a target="_blank" rel="noopener noreferrer" href="https://swiggy.com">Swiggy,
@@ -258,6 +271,7 @@
 
                                     <p>
                                         <strong>Swiggy Stores:</strong> Developed Order Relay service so that order can be relayed to vendors directly on their POS terminals
+                                        <br><strong>Finance Integration:</strong> Integration of Swiggy Stores(Marketlplace, Instamart, Liquor) with internal finance engineering for automatic vendor payouts.
                                     </p>
                                 </div>
                                 <div class="resume-item border-line-h">
