adds more exp details

--- a/about.html
+++ b/about.html
@@ -203,15 +203,15 @@
                         <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
                             <div class="text-box">
                                 <p>
-                                    I am Aniket Sinha. I write code for a living.
+                                    I am Aniket Sinha. I build things.
                                 </p>
                             </div>
                         </div>
                         <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
                             <div class="info-list">
                                 <ul>
-                                    <li><strong>Designation . . . . .</strong> SDE 3</li>
-                                    <li><strong>Organisation . . . . .</strong> Swiggy</li>
+                                    <li><strong>Designation . . . . .</strong> Engineering Lead</li>
+                                    <li><strong>Organisation . . . . .</strong> Flash.co</li>
                                     <li><strong>Address . . . . .</strong> Bengaluru, India</li>
                                 </ul>
                             </div>
@@ -249,15 +249,40 @@
                             </div>
                             <div class="resume-items">
                                 <div class="resume-item border-line-h active">
-                                    <div class="date">October, 2020 - Present</div>
+                                    <div class="date">January, 2023 - Present</div>
+                                    <div class="name">Engineering Lead</div>
+                                    <div class="company">
+                                        <a target="_blank" rel="noopener noreferrer" href="https://www.flash.co">Flash.co,
+                                            Bengaluru</a>
+                                    </div>
+
+                                    <p>
+                                        <p><strong>Ops and Marketing Portal:</strong> Led the development of operations and marketing teams where they could add rules to extract data from emails and create marketing campaigns.</p>
+                                        <p><strong>User facing features:</strong> Led the development of multiple features and pages like email backup, insights, brand and domain pages, surprise packages, 3rd party promo code etc. to increase organic goodness and app engagement.</p>
+                                        <p> <strong>Engineering Horizontals:</strong> Took multiple initiatives to stabilise system performance and availability - serverless to server migration, reader/writer separation, connection pooling, code optimisation, etc.</p>
+                                        <p> <strong>Cost control:</strong> Moved various AWS services from serverless to server, right-sized infrastructure components, purchased savings plan and reserved instances, reduced website images size. This led to savings of 40%-60% across various AWS services.
+                                            Got start-up credits from various service providers like GitHub, MongoDB, ReTool, etc.
+                                        </p>
+                                        <p><strong>Best Practices:</strong></p> Set-up engineering best practices like documentation, unit-tetsing, adoption of Gitub Co-pilot to increase developer productivity, set-up of observability tools, alerts and weekly on-call schedule
+                                        <p><strong>ISO 27001:</strong></p> Worked with Scrut team to get ISO 27001 certification.
+                                </div>
+                                <div class="resume-item border-line-h active">
+                                    <div class="date">October, 2020 - January, 2023</div>
                                     <div class="name">Software Dev Engineer III</div>
                                     <div class="company">
                                         <a target="_blank" rel="noopener noreferrer" href="https://swiggy.com">Swiggy,
                                             Bengaluru</a>
                                     </div>
 
-                                    <p>
-                                        <strong>Genie for Business:</strong> As Genie 2.0, working on extending Swiggy Genie for businesses.
+                                    <p><strong>Instamart Supply Chain Stream:</strong></p>
+                                    <p> <strong>Item Masters:</strong> Integration of in-house catalog, store operations and warehouse management software.</p>
+                                    <p> <strong>Invoicing Integration:</strong> Moved all instamart stores to in-house invoicing solution from a vendor based solution. Manged this project end to end including front end and mobile app changes. Created SOP for business teams on migration plans.</p>
+                                    <p> <strong>IGCC flows:</strong> Execution of multiple projects to reduce bad orders caused to misses during item packing</p>
+                                    <p> <strong>IPL Scaling Preparation:</strong> Swiggy being one of the sponsors of IPL 2022 expected a lot more traffic. Ensured systems are up-scaled and had necessary monitoring and alerting in place.</p>
+                                    <p></p>
+                                    <p><strong>Genie for Business:</strong></p>
+                                    <p>As Genie 2.0, worked on extending Swiggy Genie for businesses (shut down). This invloved planning, solution, execution, testing and GTM.</p>
+                                    <p><strong>IMPS Integration with a leading bank:</strong> Due to frequent payment failures in UPI transactions, worked in away model in a different team to integrate IMPS payments with a leading banking partner.</p>
 
                                     </p>
                                 </div>
@@ -383,6 +408,32 @@
                                 </ul>
                             </div>
                         </div>
+
+                        <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
+                            <div class="skills-list circles">
+                                <div class="skill-title border-line-h">
+                                    <div class="icon"><i class="ion ion-code"></i></div>
+                                    <div class="name">AWS</div>
+                                </div>
+                                <div class="skill-title border-line-h">
+                                    <div class="icon"><i class="ion ion-code"></i></div>
+                                    <div class="name">Distributed Systems</div>
+                                </div>
+                                <div class="skill-title border-line-h">
+                                    <div class="icon"><i class="ion ion-code"></i></div>
+                                    <div class="name">MySQL/Postgres/DynamoDB</div>
+                                </div>
+                                <div class="skill-title border-line-h">
+                                    <div class="icon"><i class="ion ion-code"></i></div>
+                                    <div class="name">Redis</div>
+                                </div>
+                                <div class="skill-title border-line-h">
+                                    <div class="icon"><i class="ion ion-code"></i></div>
+                                    <div class="name">Kafka/SQS</div>
+                                </div>
+                            </div>
+                        </div>
+
 
 
                         <!-- skill item -->
