--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
             <div class="profile no-photo">
 
                 <!-- profile image -->
-                <div class="slide" style="background-image: url(images/user-normal.png);"></div>
+                <div class="slide" style="background-image: url(images/aniket.jpg);"></div>
 
                 <!-- profile photo -->
                 <div class="image">
