replaces favicon, ads.txt added

--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script data-ad-client="ca-pub-3003294793017551" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3003294793017551"
+            crossorigin="anonymous"></script>
     <!--
         Favicons
     -->
@@ -63,7 +64,7 @@
     <meta name="msapplication-TileImage" content="images/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-
+    <meta name="google-adsense-account" content="ca-pub-3003294793017551">
 </head>
 
 <body>
