--- a/curl-builder.html
+++ b/curl-builder.html
@@ -36,6 +36,8 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3003294793017551"
+            crossorigin="anonymous"></script>
     <!--
         Favicons
     -->
@@ -57,6 +59,7 @@
     <meta name="msapplication-TileImage" content="images/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <meta name="google-adsense-account" content="ca-pub-3003294793017551">
 </head>
 
 <body ng-app="curlBuilder">
