--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <meta name="msapplication-TileImage" content="images/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <meta name="google-adsense-account" content="ca-pub-3003294793017551">
 </head>
 
 <body>
