--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
                                         <p> <strong>Cost control:</strong> Moved various AWS services from serverless to server, right-sized infrastructure components, purchased savings plan and reserved instances, reduced website images size. This led to savings of 40%-60% across various AWS services.
                                             Got start-up credits from various service providers like GitHub, MongoDB, ReTool, etc.
                                         </p>
-                                        <p><strong>Best Practices:</strong></p> Set-up engineering best practices like documentation, unit-tetsing, adoption of Gitub Co-pilot to increase developer productivity, set-up of observability tools, alerts and weekly on-call schedule
+                                        <p><strong>Best Practices:</strong></p> Set-up engineering best practices like documentation, unit-testing, adoption of Gitub Co-pilot to increase developer productivity, set-up of observability tools, alerts and weekly on-call schedule
                                         <p><strong>ISO 27001:</strong></p> Worked with Scrut team to get ISO 27001 certification.
                                 </div>
                                 <div class="resume-item border-line-h active">
