--- a/about.html
+++ b/about.html
@@ -282,7 +282,7 @@
                                     <p> <strong>IPL Scaling Preparation:</strong> Swiggy being one of the sponsors of IPL 2022 expected a lot more traffic. Ensured systems are up-scaled and had necessary monitoring and alerting in place.</p>
                                     <p></p>
                                     <p><strong>Genie for Business:</strong></p>
-                                    <p>As Genie 2.0, worked on extending Swiggy Genie for businesses (shut down). This invloved planning, solution, execution, testing and GTM.</p>
+                                    <p>As Genie 2.0, worked on extending Swiggy Genie for businesses (shut down). This involved planning, solution, execution, testing and GTM.</p>
                                     <p><strong>IMPS Integration with a leading bank:</strong> Due to frequent payment failures in UPI transactions, worked in away model in a different team to integrate IMPS payments with a leading banking partner.</p>
 
                                 </div>
