--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
 
                                     <p><strong>Instamart Supply Chain Stream:</strong></p>
                                     <p> <strong>Item Masters:</strong> Integration of in-house catalog, store operations and warehouse management software.</p>
-                                    <p> <strong>Invoicing Integration:</strong> Moved all instamart stores to in-house invoicing solution from a vendor based solution. Manged this project end to end including front end and mobile app changes. Created SOP for business teams on migration plans.</p>
+                                    <p> <strong>Invoicing Integration:</strong> Moved all instamart stores to in-house invoicing solution from a vendor based solution. Managed this project end to end including front end and mobile app changes. Created SOP for business teams on migration plans.</p>
                                     <p> <strong>IGCC flows:</strong> Execution of multiple projects to reduce bad orders caused to misses during item packing</p>
                                     <p> <strong>IPL Scaling Preparation:</strong> Swiggy being one of the sponsors of IPL 2022 expected a lot more traffic. Ensured systems are up-scaled and had necessary monitoring and alerting in place.</p>
                                     <p></p>
