redesign with blog

--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/">
+                        <a href="tools.html">
                             <span class="icon ion-code"></span>
                             <span class="link">Dev Tools</span>
                         </a>
