--- a/curl-builder.html
+++ b/curl-builder.html
@@ -89,7 +89,7 @@
             <div class="top-menu">
                 <ul>
                     <li>
-                        <a href="/">
+                        <a href="tools.html">
                             <span class="icon ion-code"></span>
                             <span class="link">More Dev Tools</span>
                         </a>
@@ -139,6 +139,11 @@
                             </div>
                         </div>
                         <div class="clear"></div>
+                    </div>
+                    <div style="text-align: center; margin-top: 30px; padding-top: 20px; border-top: 1px solid #e0e0e0;">
+                        <a href="tools.html" style="color: #0066cc; text-decoration: none; font-weight: 500; display: inline-flex; align-items: center; gap: 8px;">
+                            <span class="icon ion-arrow-left-c"></span> Back to Dev Tools
+                        </a>
                     </div>
                 </div>
             </div>
