--- a/about.html
+++ b/about.html
@@ -124,9 +124,21 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/">
+                        <a href="dev-tools.html">
                             <span class="icon ion-code"></span>
                             <span class="link">Dev Tools</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html">
+                            <span class="icon ion-home"></span>
+                            <span class="link">Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="blog/index.html">
+                            <span class="icon ion-document"></span>
+                            <span class="link">Blog</span>
                         </a>
                     </li>
                     <li>
