--- a/text-diff.html
+++ b/text-diff.html
@@ -7,7 +7,7 @@
     -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CURL Builder - Aniket Sinha</title>
+    <title>Text Diff - Aniket Sinha</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!--
@@ -30,6 +30,55 @@
     <link rel="stylesheet" href="css/gradient.css" />
     <link rel="stylesheet" href="css/new-skin/new-skin.css" />
     <link rel="stylesheet" href="css/new-skin/template-colors/green.css" />
+
+    <style>
+        .diff-container {
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .diff-side {
+            flex: 1;
+            border: 1px solid #e0e0e0;
+            border-radius: 4px;
+            padding: 15px;
+            background: #f9f9f9;
+        }
+        .diff-side h3 {
+            margin-top: 0;
+            margin-bottom: 10px;
+            font-size: 1.1rem;
+        }
+        .diff-output {
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 10px;
+            font-family: 'Courier New', monospace;
+            font-size: 0.9rem;
+            line-height: 1.6;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+            max-height: 500px;
+            overflow-y: auto;
+        }
+        .diff-added {
+            background-color: #d4edda;
+            color: #155724;
+        }
+        .diff-removed {
+            background-color: #f8d7da;
+            color: #721c24;
+        }
+        .diff-unchanged {
+            color: #333;
+        }
+        @media (max-width: 768px) {
+            .diff-container {
+                flex-direction: column;
+            }
+        }
+    </style>
 
     <!--[if lt IE 9]>
     <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
@@ -62,8 +111,8 @@
     <meta name="google-adsense-account" content="ca-pub-3003294793017551">
 </head>
 
-<body ng-app="curlBuilder">
-<div class="page new-skin" ng-controller="curlFormController">
+<body>
+<div class="page new-skin">
 
     <!-- background -->
     <div class="background gradient">
@@ -119,35 +168,35 @@
         <div class="card-started" id="home-card">
             <div class="profile no-photo">
                 <div class="col col-d-6 col-t-6 col-m-12 border-line-v">
-                    <select ng-model="selected.method" ng-options="m for m in methods"></select>
-                    <div class="col col-d-6 col-t-6 col-m-12">
-                        <input type="text" ng-model="selected.url" placeholder="http://aniketsinha.com"></input>
-                    </div>
-                    <div class="col col-d-6 col-t-6 col-m-12" ng-repeat="sh in  selected.headers">
-                        <input type="text" ng-model="sh.key" placeholder="header key" style="width: 40%; float: left"></input>
-                        <input type="text" ng-model="sh.value" placeholder="header value" style="width: 45%; float: left"></input>
-                        <button ng-click="removeHeader($index)"><span class="icon ion-minus" style="padding-top: 50%;"></span></button>
-                    </div>
-                    <button ng-click="addHeader()"><span class="icon ion-plus" style="padding-top: 50%;"></span></button>
                     <div class="text-box">
-                        <textarea rows="200" cols="200" class="ht350" id="ta-input" ng-model="selected.body"></textarea>
+                        <p><strong>Original Text:</strong></p>
+                        <textarea rows="200" cols="200" class="ht350" id="text-original" placeholder="Enter original text here..."></textarea>
+                        <br>
+                        <p><strong>Modified Text:</strong></p>
+                        <textarea rows="200" cols="200" class="ht350" id="text-modified" placeholder="Enter modified text here..."></textarea>
+                        <br><button onclick="computeDiff()">Compute Diff</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="card-inner animated active" id="unescape-card">
+        <div class="card-inner animated active" id="text-diff-card">
             <div class="card-wrap">
                 <div class="content about">
-                    <div class="title">CURL Builder</div>
+                    <div class="title">Text Diff Viewer</div>
                     <div class="row">
                         <div class="col col-d-12 col-t-12 col-m-12 border-line-v">
                             <div class="text-box">
-                                <p>
-                                    <button onclick="copyCurlString()" id="btn-copy-curl"><span class="icon ion-ios-copy"></span> Click to Copy</button>
-                                    <br>
-                                    <textarea rows="200" cols="200" class="ht350" id="curl-output" ng-model="output"></textarea>
-                                </p>
+                                <div class="diff-container">
+                                    <div class="diff-side">
+                                        <h3>Original</h3>
+                                        <div class="diff-output" id="diff-original-output"></div>
+                                    </div>
+                                    <div class="diff-side">
+                                        <h3>Modified</h3>
+                                        <div class="diff-output" id="diff-modified-output"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="clear"></div>
@@ -178,8 +227,7 @@
 
 
 <script src="js/script.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-<script src="js/curl-app.js"></script>
+<script src="js/text-diff.js"></script>
 
 </body>
 </html>
