--- a/jwt-decoder.html
+++ b/jwt-decoder.html
@@ -89,7 +89,7 @@
             <div class="top-menu">
                 <ul>
                     <li>
-                        <a href="dev-tools.html">
+                        <a href="tools.html">
                             <span class="icon ion-code"></span>
                             <span class="link">More Dev Tools</span>
                         </a>
@@ -162,7 +162,7 @@
                         <div class="clear"></div>
                     </div>
                     <div style="text-align: center; margin-top: 30px; padding-top: 20px; border-top: 1px solid #e0e0e0;">
-                        <a href="dev-tools.html" style="color: #0066cc; text-decoration: none; font-weight: 500; display: inline-flex; align-items: center; gap: 8px;">
+                        <a href="tools.html" style="color: #0066cc; text-decoration: none; font-weight: 500; display: inline-flex; align-items: center; gap: 8px;">
                             <span class="icon ion-arrow-left-c"></span> Back to Dev Tools
                         </a>
                     </div>
