critical thinking blog added

--- a/index.html
+++ b/index.html
@@ -424,6 +424,13 @@
             <h2 class="section-title">Latest Blog Posts</h2>
             
             <div class="blog-grid">
+                <a href="blog/posts/ai-should-review-your-thinking-not-replace-it.html" class="blog-card">
+                    <div class="blog-card-date">February 2026</div>
+                    <h3 class="blog-card-title">AI Should Review Your Thinking, Not Replace It</h3>
+                    <p class="blog-card-excerpt">A practical staff-engineer workflow for using AI without outsourcing judgment: Think → Commit → Consult, plus a lightweight “review board” approach for design docs, PR reviews, incidents, and strategy.</p>
+                    <span class="blog-card-read-more">Read More →</span>
+                </a>
+                
                 <a href="blog/posts/understanding-mcp-model-context-protocol.html" class="blog-card">
                     <div class="blog-card-date">February 2025</div>
                     <h3 class="blog-card-title">Understanding MCP: Model Context Protocol Use Cases and Examples</h3>
