--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Google AdSense -->
     <script data-ad-client="ca-pub-3003294793017551" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     
+    <script src="https://quge5.com/88/tag.min.js" data-zone="212662" async data-cfasync="false"></script>
     <!-- Favicons -->
     <link rel="shortcut icon" href="images/favicons/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png">
